--- a/duckhunt.css
+++ b/duckhunt.css
@@ -1,12 +1,12 @@
 body,
 html {
-  width: 100%;
-  height: 100%;
+  height: 100vh;
   margin: 0;
-  background-image: url(images/background.png);
-  background-size: cover;
-  background-position: center;
-  image-rendering: optimizeSpeed;
+  background-image: url(images/background.webp);
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center;
+image-rendering: optimizeSpeed;
   image-rendering: -moz-crisp-edges;
   image-rendering: -o-crisp-edges;
   image-rendering: -webkit-optimize-contrast;
@@ -15,32 +15,19 @@ html {
   overflow: hidden;
 }
 
-.duck {
-  position: absolute;
-  background-image: url(images/duckhunt.png);
-  background-position: -100px -160px;
-  width: 110px;
-  height: 115px;
-  top: 100px;
-  left: 100px;
-  transition: top 2s, left 2s;
-  transition-timing-function: linear;
-  background-repeat: no-repeat;
+.start{
+  font-size: 25vh;
+  border-width:5px;
+  border-style: ridge;
+  padding-bottom: 0.5em;
 }
 
-.duck.right {
-  background-position: -200px -160px;
+.btnStart{
+  margin-top: 20vh;
 }
-.duck.right.flap {
-  background-position: -300px -160px;
-}
-.duck {
-  background-position: -100px -160px;
-}
-.duck.flap {
-  background-position: -430px -160px;
-}
-.duck.shot {
-  background-position: center;
-  background-image: url(images/shot.png);
+
+.count{
+  text-align:right;
+  padding-right:5vw;
+  padding-top:5vh;
 }
