--- a/duckhunt.css
+++ b/duckhunt.css
@@ -2,7 +2,7 @@ body,
 html {
   height: 100vh;
   margin: 0;
-  background-image: url(images/background.webp);
+  background-image: url(images/backgroundMoutain.webp);
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
